<resources>
    <string name="app_name">Tasks</string>
    <string name="action_settings">Settings</string>
    <string name="email_login">Email Address</string>
    <string name="password_login">Password</string>
    <string name="login_button">Login</string>
    <string name="signUp_button">Sign Up</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="group_tasks_button">Group Tasks</string>
    <string name="create_tasks_button">Create Task</string>
    <string name="tasks_list_button">Tasks List</string>
    <string name="group_info_button">Group Info</string>
    <string name="title_activity_signup">signup</string>
    <string name="signup_button">Create Account</string>
    <string name="alreadyMember_button">Already a member? Login</string>
    <string name="logo">logo</string>
    <string name="title_activity_sign_uplayout">signUplayout</string>
    <string name="email_signup">Email Address</string>
    <string name="password_signup">Enter Your Password</string>
    <string name="verify_signup">Verify Password</string>
    <string name="phone_signup">Phone Number</string>
    <string name="groupName_signup">New Group Name</string>
    <string name="title_activity_invite_friends">inviteFriends</string>
    <string name="invite_send_button">Send Invitations</string>
    <string name="recycle_view1">Recycle View1</string>
    <string name="title_activity_create_new_task">create_new_task</string>

    <string name="hello_world">Hello world!</string>
    <string name="NewTask">Create New Task</string>
    <string name="title_activity_client_menu">client_menu</string>
    <string name="title_activity_client_personal_info">client_personal_info</string>
    <string name="title_activity_active_task">activeTask</string>
    <string name="title_activity_pending_task">pendingTask</string>
    <string name="title_activity_completed_task">completedTask</string>
    <string name="title_activity_welcome">welcome</string>
    <string name="title_activity_test_draw">TestDraw</string>

    <string name="title_section1">Section 1</string>
    <string name="title_section2">Section 2</string>
    <string name="title_section3">Section 3</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_example">Example action</string>
    <string name="title_activity_test_navigation">testNavigation</string>
    <string name="title_activity_test_nav">testNav</string>
    <string name="title_activity_main2_activity_test">Main2ActivityTest</string>
    <string name="action_settings1">action_settings1</string>
    <string name="action_settings2">action_settings2</string>
    <string name="action_settings3">action_settings3</string>
    <string name="title_activity_drawer_test">drawerTest</string>

</resources>