<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:background="#00345d">

    <GridLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true"
        android:id="@+id/gridLayout">
    </GridLayout>

    <ImageView android:src="@drawable/logonew1"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginBottom="15dp"
        android:layout_gravity="center_horizontal"
        android:contentDescription="@string/logo"
        android:id="@+id/logo"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/group_tasks_button"
        android:width="100dp"
        android:height="100dp"
        android:id="@+id/groupTasks_button"
        android:layout_marginEnd="45dp"
        android:layout_marginTop="100dp"
        android:background="#002847"
        android:layout_below="@+id/gridLayout"
        android:layout_toLeftOf="@+id/createTask_button"
        android:layout_toStartOf="@+id/createTask_button"
        android:layout_marginRight="45dp"
        android:textColor="#ffffff"
        />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/create_tasks_button"
        android:width="100dp"
        android:height="100dp"
        android:id="@+id/createTask_button"
        android:layout_marginEnd="49dp"
        android:layout_alignTop="@+id/groupTasks_button"
        android:layout_alignParentEnd="true"
        android:background="#002847"
        android:textColor="#ffffff" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tasks_list_button"
        android:width="100dp"
        android:height="100dp"
        android:id="@+id/tasksList_button"
        android:layout_alignStart="@+id/groupTasks_button"
        android:background="#002847"
        android:clickable="true"
        android:textColor="#ffffff"
        android:layout_marginTop="230dp" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/group_info_button"
        android:width="100dp"
        android:height="100dp"
        android:id="@+id/groupInfo_button"
        android:layout_marginTop="32dp"
        android:layout_below="@+id/createTask_button"
        android:layout_alignStart="@+id/createTask_button"
        android:background="#002847"
        android:textColor="#ffffff" />
</RelativeLayout>
