<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MainActivity"
    android:background="#00345d">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:id="@+id/linearLayout">

        <ImageView android:src="@drawable/logonew1"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:layout_marginBottom="24dp"
            android:layout_gravity="center_horizontal"
            android:contentDescription="@string/logo"
            android:id="@+id/logo"/>
    </LinearLayout>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:inputType="textPersonName"
        android:ems="10"
        android:id="@+id/email_login"
        android:layout_gravity="center_horizontal"
        android:hint="@string/email_login"
        android:textAlignment="center"
        android:layout_below="@+id/linearLayout"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="34dp"
        android:layout_marginBottom="10dp"
        android:background="#ffffff"
        android:textColor="#000000" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:inputType="textPassword"
        android:ems="10"
        android:id="@+id/password_login"
        android:hint="@string/password_login"
        android:layout_below="@+id/email_login"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="10dp"
        android:background="#ffffff"
        android:textColor="#000000" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/relative"
        android:layout_alignParentTop="true"
        android:layout_toEndOf="@+id/linearLayout">

    </RelativeLayout>

    <!--<Button-->
        <!--android:layout_width="fill_parent"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:width="180dp"-->
        <!--android:text="Login"-->
        <!--android:id="@+id/login_button"-->
        <!--android:clickable="true"-->
        <!--android:layout_below="@+id/password_login"-->
        <!--android:layout_centerHorizontal="true"-->
        <!--android:layout_marginTop="80dp"-->
        <!--android:background="#607D8B"-->
        <!--android:textColor="#FFFFFF" />-->

    <Button
        android:id="@+id/angry_btn"
        android:text="Login"
        android:textColor="#666565"
        android:textSize="20sp"
        android:layout_width="200dp"
        android:layout_height="40dp"
        android:background="@drawable/button"
        android:layout_below="@+id/password_login"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="60dp"
        android:clickable="true" />

    <Button
        android:layout_width="200dp"
        android:layout_height="40dp"
        android:width="180dp"
        android:text="Sign Up"
        android:id="@+id/signUp_button"
        android:clickable="true"
        android:visibility="visible"
        android:background="@drawable/button"
        android:elegantTextHeight="false"
        android:textColor="#727272"
        android:textSize="20sp"
        android:layout_below="@+id/angry_btn"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp" />

</RelativeLayout>
